<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Overture-v2beta</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete_playlist">Delete Playlist</string>
    <string name="settings">Settings</string>
    <string name="sort_by">Sort by:</string>
    <string name="artist">Artist</string>
    <string name="title">Title</string>
    <string name="album">Album</string>
    <string name="search_hint">Search Songs</string>
    <string name="drawer_header_playlists">Playlists</string>
    <string name="new_playlist">New playlist</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="all_songs_playlist_name">All songs</string>
    <string name="action_edit_playlist">Edit Playlist</string>
    <string name="shuffle">Shuffle</string>
    <string name="delete_playlist_prompt_title">Delete playlist?</string>
    <string name="delete_playlist_positive_button">Delete</string>
    <string name="delete_playlist_negative_button">Cancel</string>
    <string name="hint_search_for_songs">Search for songs...</string>
    <string name="licenses">Licenses</string>
</resources>
