<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/navigation_drawer_content"
    android:layout_width="@dimen/left_drawer_width"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="#FFF"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/playlist_header_text"
        style="@style/NavDrawerSubheader"
        android:text="@string/drawer_header_playlists" />

    <ListView
        android:id="@+id/playlist_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/playlist_header_text"
        android:divider="@null" />

    <TextView
        android:id="@+id/playlist_new"
        style="@style/NavDrawerItem.NoIcon"
        android:text="@string/new_playlist"
        android:layout_below="@id/playlist_list"
        android:layout_marginBottom="8dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="7dp"
        android:id="@+id/info_spacer"
        android:layout_below="@id/playlist_new" />

    <TextView
        android:id="@+id/license_info"
        android:text="@string/licenses"
        style="@style/NavDrawerItem"
        android:drawableLeft="@drawable/ic_alert_octagon_grey"
        android:drawableStart="@drawable/ic_alert_octagon_grey"
        android:layout_below="@id/info_spacer"
        android:layout_marginBottom="8dp" />
</RelativeLayout>