<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/navigation_drawer_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:background="#FFF"
                android:fitsSystemWindows="true"
                android:orientation="vertical"
                android:choiceMode="singleChoice"
                android:divider="@android:color/transparent"
                android:dividerHeight="0dp"
                tools:context=".NavigationDrawerFragment">
    <TextView
            android:id="@+id/playlist_header_text"
            style="@style/NavDrawerSubheader"
            android:text="@string/drawer_header_playlists"/>

    <ListView
            android:id="@+id/playlist_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/playlist_header_text"
            android:divider="@null"/>

    <TextView
            android:id="@+id/playlist_new"
            style="@style/NavDrawerItem.NoIcon"
            android:text="@string/new_playlist"
            android:layout_below="@id/playlist_list"
            android:layout_marginBottom="8dp"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="7dp"
            android:id="@+id/info_spacer"
            android:layout_below="@id/playlist_new"/>

    <TextView
            android:id="@+id/license_info"
            android:text="@string/licenses"
            style="@style/NavDrawerItem"
            android:drawableLeft="@drawable/ic_alert_octagon_grey"
            android:drawableStart="@drawable/ic_alert_octagon_grey"
            android:layout_below="@id/info_spacer"
            android:layout_marginBottom="8dp"/>
</RelativeLayout>